--- a/wordle/src/index.html
+++ b/wordle/src/index.html
@@ -10,6 +10,9 @@
   <!-- BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+
+  <!-- App Link: https://cs4640.cs.virginia.edu/kck3due/hw8/ -->
 </head>
 
 <body>
