--- a/wordle/src/index.html
+++ b/wordle/src/index.html
@@ -12,7 +12,7 @@
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
 
-  <!-- App Link: https://cs4640.cs.virginia.edu/kck3due/hw8/ -->
+  <!-- App Link: https://cs4640.cs.virginia.edu/kck3due/hw8/dist/wordle/ -->
 </head>
 
 <body>
